force-app/main/default/objects/Knowledge__kav/fields/About_the_software_firmware_drivers__c.field-meta.xml
<CustomField>
    <fullName>About_the_software_firmware_drivers__c</fullName>
    <description>This field is used to store the information about the software</description>
    <label>About the software/firmware/drivers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>