force-app/main/default/objects/Knowledge__kav/fields/Answer_Internal__c.field-meta.xml
<CustomField>
    <fullName>Answer_Internal__c</fullName>
    <label>Answer(Internal)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>