force-app/main/default/objects/Knowledge__kav/fields/Applicable_Model1__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Model1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On the record</description>
    <label>Applicable Model</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Applicable_Model</relationshipLabel>
    <relationshipName>Applicable_Model</relationshipName>
    <type>Lookup</type>
</CustomField>