force-app/main/default/objects/Knowledge__kav/fields/Applicable_Model__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Model__c</fullName>
    <label>Applicable Model</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>