force-app/main/default/objects/Knowledge__kav/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <description>This field is used to store the category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software 32bit</fullName>
            </value>
            <value>
                <fullName>Software 64bit</fullName>
            </value>
            <value>
                <fullName>Service pack</fullName>
            </value>
            <value>
                <fullName>Service release</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>