force-app/main/default/objects/Knowledge__kav/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>