force-app/main/default/objects/Knowledge__kav/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field is used to store the product description.</description>
    <label>Description (optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>