force-app/main/default/objects/Knowledge__kav/fields/Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Link__c</fullName>
    <description>This field is used to store the document download link</description>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>