force-app/main/default/objects/Knowledge__kav/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>This field is used to store the document name.</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>