force-app/main/default/objects/Knowledge__kav/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>This field is used to store the document number.</description>
    <label>Document Number (optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>