force-app/main/default/objects/Knowledge__kav/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>This field is used to store the document type.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruction Manuals</fullName>
            </value>
            <value>
                <fullName>Technical Information</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>General Specifications</fullName>
            </value>
            <value>
                <fullName>Drawings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>