force-app/main/default/objects/Knowledge__kav/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <description>This field is used to store the product category</description>
    <label>Product category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
            <value>
                <fullName>Test4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>