force-app/main/default/objects/Knowledge__kav/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <label>Product type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Control PLC/RTU (STARDOM)</fullName>
            </value>
            <value>
                <fullName>Controllers &amp; Indicators</fullName>
            </value>
            <value>
                <fullName>Field Instruments</fullName>
            </value>
            <value>
                <fullName>Analytical Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>