force-app/main/default/objects/Knowledge__kav/fields/Question_local__c.field-meta.xml
<CustomField>
    <fullName>Question_local__c</fullName>
    <label>Question(Internal)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>