force-app/main/default/objects/Knowledge__kav/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>This field is used to store the release date</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>