force-app/main/default/objects/Knowledge__kav/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>This field is used to store the software revision</description>
    <label>Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>