force-app/main/default/objects/Knowledge__kav/fields/Software_Firmware_Driver_name__c.field-meta.xml
<CustomField>
    <fullName>Software_Firmware_Driver_name__c</fullName>
    <description>This field is used to store the Software/Firmware/Driver name</description>
    <label>Software/Firmware/Driver name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>