force-app/main/default/objects/Knowledge__kav/fields/Supporting_Operating_Systems__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Operating_Systems__c</fullName>
    <description>This field is used to store the supporting OS</description>
    <label>Supporting Operating Systems (optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>