force-app/main/default/objects/Knowledge__kav/fields/Updated_Content__c.field-meta.xml
<CustomField>
    <fullName>Updated_Content__c</fullName>
    <description>This field is used to update a content</description>
    <label>Updated Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>