force-app/main/default/objects/Knowledge__kav/recordTypes/Administrative.recordType-meta.xml
<RecordType>
    <fullName>Administrative</fullName>
    <active>true</active>
    <description>General information on administrative related issues – service support, call center, login and password reset, etc.</description>
    <label>Administrative</label>
</RecordType>