force-app/main/default/objects/Knowledge__kav/recordTypes/Bug_report.recordType-meta.xml
<RecordType>
    <fullName>Bug_report</fullName>
    <active>true</active>
    <description>Information on known or reported bugs and recommended fixes.</description>
    <label>Bug report</label>
</RecordType>