force-app/main/default/objects/Knowledge__kav/recordTypes/Feature_request.recordType-meta.xml
<RecordType>
    <fullName>Feature_request</fullName>
    <active>true</active>
    <description>New feature requests or product enhancement-related topics.</description>
    <label>Feature request</label>
</RecordType>