force-app/main/default/objects/Knowledge__kav/recordTypes/Market_Competitor_info.recordType-meta.xml
<RecordType>
    <fullName>Market_Competitor_info</fullName>
    <active>true</active>
    <description>Market trends and competitors’ information.</description>
    <label>Market / Competitor info</label>
</RecordType>