force-app/main/default/objects/Knowledge__kav/recordTypes/Technical_article.recordType-meta.xml
<RecordType>
    <fullName>Technical_article</fullName>
    <active>true</active>
    <description>Topics on technical-related questions, issues, and how-to on our products, solutions, and services.</description>
    <label>Technical article</label>
</RecordType>